# serbuffer-rs

./: Cargo.toml  README.md
serbuffer/: Cargo.toml
serbuffer-gen/: Cargo.toml
serbuffer-gen/src/: lib.rs
serbuffer-it/: Cargo.toml  build.rs
serbuffer-it/src/: lib.rs
serbuffer-it/src/buffer_gen/: .gitignore  gen_demo.rs  mod.rs
serbuffer/src/: buffer.rs  lib.rs  metadata.rs  reader.rs  writer.rs
serbuffer/src/encoding/: length_encoded_integer.rs  mod.rs
